# jumpy

./: .gitignore  Cargo.toml  LICENSE  README.md  pc.md  run.bat
game/: Cargo.toml  build.rs  clean.bat  debug.bat  gba.bat  level.bat  run.bat  rust-toolchain.toml  rustfmt.toml
game/.cargo/: cargo.toml  config.toml
game/doc/: build-notes.md
game/src/: assets.rs  enemy_kind.rs  engine_math.rs  lib.rs  main.old  main.rs  main_gab.rs  main_gba.rs  main_pc.rs  main_psprs  tile.rs  world.rs
game/src/ai/: mod.rs  system.rs
game/src/common/: coords.rs  debugln.rs  mod.rs
game/src/ecs/: component_store.rs
game/src/game/: book_reader.rs  game_session.rs  game_state.rs  input.rs  inventory.rs  level.rs  message_table.rs  mod.rs  settings.rs  triggers.rs  world.rs
game/src/game/book/: mod.rs  reader.rs  reader_pc.rs  reading_state.rs
game/src/game/doc/: build-notes.md
game/src/game/render/: gba.rs  pc.rs  psp.rs
game/src/physics/: collision.rs  constants.rs  gravity.rs  jump.rs  mod.rs  movement.rs
game/src/platform/: level_loader.rs  memory.rs  mod.rs
game/src/platform/audio/: backend.rs  gba.rs  mod.rs  null_audio.rs  pc.rs  psp.rs
game/src/platform/input/: backend.rs  gba.rs  mod.rs  pc.rs  psp.rs
game/src/platform/render/: backend.rs  common.rs  gba.rs  icon_registry.rs  mod.rs  pc.rs  pc_platform.rs  psp.rs  render.rs
game/src/platform/render/pc/: book_overlay.rs  draw.rs  mod.rs  platform_tiles.rs  renderer.rs  (+1 more)
game/src/platform/timer/: backend.rs
game/src/render/: pc.rs
game/src/runtime/: inventory.rs  level.rs  message_table.rs  mod.rs  music.rs  session.rs  settings.rs  state.rs  triggers.rs
game/src/runtime/assets/: gba.rs  mod.rs  psp.rs
game/src/runtime/book/: mod.rs  reader.rs  reader_gba.rs  reader_pc.rs  reader_psp.rs  reading_state.rs
game/src/runtime/render/: gba.rs  mod.rs  psp.rs
(+48 files in other folders)
