[package]
version = "0.0.1"
authors = ["Durus"]
name = "jumpy"
edition = "2024"
description = "Simple platformer"


[features]
default = ["pc"]
gba = []          # GBA-specific feature
pc = ["nalgebra"] # PC-specific feature, depends on nalgebra

[dependencies]
nalgebra = { version = "0.33", optional = true } # PC-only dependency
agb = { version = "0.5", optional = true }       # GBA-only dependency
