[package]
version = "0.0.1"
authors = ["LordDurus"]
name = "jumpy"
edition = "2024"
description = "Simple platformer"
repository = "https://github.com/LordDurus/jumpy"

[features]
default = ["pc"]
gba = ["agb"]                      # GBA specific feature
pc = ["nalgebra", "sdl2", "rayon"] # PC specific feature
psp = ["psp-support"]              # PSP specific feature

[dependencies]
agb = { version = "0.22.6", optional = true } # GBA only dependency
nalgebra = { version = "0.34.1", optional = true } # PC only dependency
sdl2 = { version = "0.37", features = [
	"image",
	"use-vcpkg",
], optional = true } # PC only dependency
rayon = { version = "1.6", optional = true } # PC only dependency
psp-support = { package = "psp", version = "0.3.11", optional = true } # Alias for the psp crate

[profile.dev]
debug = true
